package vehicle;

public class Car {
}
