package vehicle;

public interface IRouteHandler {
}
