package vehicle;

public interface IScoreOwner {
}
